# AirplaneGraphProject

./: .gitignore  AirplaneGraphProject.cabal  AirplaneType.hs  FileParser.hs  JSONParser.hs  MainSolver.hs  README.md  airplane.js  airport.js  airport_graph_builder.js  compile.sh  compileAndRun.sh  constraints.json  fileLoader.js  index.html  main.js  package-lock.json  package.js  package.json  package_data.json  parser.js  pathFinder.js  runTest.sh  runUnitTests.sh  test.txt  tt.json
Haskell/: AirplaneGraphProject.cabal  LICENSE  README.md  compileAndRun.sh  compileAndRunALLTests.sh  runUnitTests.sh  solutions.txt  tests.md
Haskell/app/: AirplaneType.hs  AirportGraph.hs  AirportNetwork.hs  JsonParser.hs  Main.hs  PackageType.hs  PrettyPrintSolution.hs  Solver.hs
Haskell/sample_input_files/: sample_distance.json  sample_distance2.json  sample_package.json  sample_package2-1.json  sample_package2-3.json
Haskell/tests/: tests.md
Haskell/tests/integration_tests/16/: 16_constraints.json
Haskell/tests/unit_tests/: AirportGraphTest.hs  AirportNetworkTest.hs
Haskell/unit_tests/: AirportNetworkTest.hs
Javascript/: README.md  airplane.js  main.js  package.js  package.json  runAllTestCases.sh  tests.md
Other/: README.md  generate_graphs.py
app/: AirplaneType.hs  AirportGraph.hs  JsonParser.hs  Main.hs  PackageType.hs  PrettyPrintSolution.hs  Solver.hs  solver.hs
js/: airplane.js  eslint.config.mjs  main.js  pathFinder.js
sample_input_files/: sample2-details.txt  sample_constraints.json  sample_constraints2.json  sample_distance.json  sample_distance2.json  (+5 more)
(+76 files in other folders)
