cabal-version: 3.0
name: AirplaneGraphProject
version: 0.1.0.0
author: Depanshu, Kevin, Axyl
maintainer: 122829642+Suya678@users.noreply.github.com
build-type: Simple
common deps
  build-depends:       base,
                       aeson,
                       lens-aeson,
                       bytestring >= 0.11.5.3,
                       time,
                       split,
                       containers,
                       regex-tdfa
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  import:              deps
  exposed-modules:     JsonParser,
                       AirportNetwork,
                       PackageType,
                       AirplaneType,
                       Solver,
                       PrettyPrintSolution
  hs-source-dirs:      app

executable AirplaneGraphProject
  import:              deps
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       AirplaneGraphProject
  other-modules:       JsonParser,
                       AirportNetwork,
                       PackageType,
                       AirplaneType, 
                       Solver,
                       PrettyPrintSolution

executable AirportNetworkTest
  import:              deps
  main-is:             AirportNetworkTest.hs
  hs-source-dirs:      unit_tests/
  build-depends:       AirplaneGraphProject

